--- a/src/containers/Users/Users.module.scss
+++ b/src/containers/Users/Users.module.scss
@@ -3,6 +3,8 @@
 
 .container {
   padding: 20px;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .header {
@@ -86,6 +88,7 @@
     button {
       width: 100%;
     }
+    
     @include for-size(medium) {
       margin-top: 0;
       width: 10%;
